--- a/style.css
+++ b/style.css
@@ -15,11 +15,17 @@ body {
     align-content: center;
 }
 
+ a {
+     text-decoration: none;
+ }
+
 .header {
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: rgb(242, 199, 74);
+    padding: 8px;
+    gap: 16px;
 }
 
 .content {
@@ -27,7 +33,7 @@ body {
     flex-direction: column;
     justify-content: center;
     padding: 16px;
-    gap: 8px;
+    gap: 16px;
 }
 
 button {
