replaced vanilla CSS with SASS, edited HTMl structure

--- a/OLDstyle.css
+++ b/OLDstyle.css
@@ -1,4 +1,5 @@
 /* base styling */
+/* this is a deprecated stylesheet */
 @font-face {
     font-family: "Roboto"; 
     src: url(resources/fonts/Roboto-Regular.ttf);
