added background colour to sub accordian folders

--- a/styles/_accordians.scss
+++ b/styles/_accordians.scss
@@ -23,6 +23,10 @@ $accordian-active: #ccc;
     max-height: 0;
 }
 
+.panel.inside {
+    background-color: $accordian-inactive;
+}
+
 /* state for when accordians are active */
 .accordian ~ .panel {
     max-height: 0px;
